# proxnut

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
example/: k8s.yaml
src/proxnut/: __init__.py  __main__.py  notifier.py  proxmox_client.py  proxnut.py  ups_client.py
tests/: __init__.py  mocks.py  test_proxnut_monitor.py
