[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxnut"
dynamic = ["version"]
description = "Control Proxmox when power-loss, powered by Network UPS Tool(nut)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "proxmoxer>=2.2.0",
    "pynutclient>=2.8.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
]

[project.scripts]
proxnut = "proxnut:main"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
]

[tool.hatch.version]
path = "src/proxnut/__init__.py"

[tool.poe.tasks]
build = "docker build -t proxnut:local ."
